# specs_physics_amethyst_2d_example

./: Cargo.toml
assets/: display.ron  logo.ron
src/: main.rs
