[package]
name = "specs_physics_2d_example"
version = "0.1.0"
authors = ["cheezeygeek"]
edition = "2020"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.104", features = ["derive"]}
# specs-physics = {git = "https://github.com/distransient/specs-physics/", branch = "0.4.0", default-features = false, features=["dim2", "amethyst"]}
specs-physics = {git = "https://github.com/cies/specs-physics/", branch = "personal", default-features = false, features=["dim2", "amethyst"]}

[dependencies.amethyst]
git = "https://github.com/amethyst/amethyst"
features = ["vulkan", "nightly", "shader-compiler"]